--- a/package.json
+++ b/package.json
@@ -1,26 +1,23 @@
 {
-  "name": "@steelskysoftware/antivex",
+  "name": "@antivex/core-utils",
   "author": "steelskysoftware",
   "license": "ISC",
-  "publishConfig": {
-    "registry": "https://npm.pkg.github.com"
-  },
   "repository": {
     "type": "git",
-    "url": "https://git@github.com/steelskysoftware/antivex.git"
+    "url": "https://git@github.com/steelskysoftware/antivex-core-utils.git"
   },
   "keywords": [
     "vscode",
     "extensions"
   ],
-  "displayName": "Antivex",
-  "description": "Collection of extensions to remove or fix a specific set of annoyances, quirks and UI/UX issues with VS Code.",
+  "displayName": "Antivex Core Utils",
+  "description": "Utilities for Antivex extensions.",
   "version": "0.0.1",
   "engines": {
-      "vscode": "^1.68.0"
+    "vscode": "^1.68.0"
   },
   "bugs": {
-    "url": "https://github.com/steelskysoftware/antivex/issues"
+    "url": "https://github.com/steelskysoftware/antivex-core-utils/issues"
   },
-  "homepage": "https://github.com/steelskysoftware/antivex#readme"
+  "homepage": "https://github.com/steelskysoftware/antivex-core-utils#readme"
 }
